# RoughCopy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
RoughCopy_DEB_Packages/: roughcopy-dbgsym_1.0-1_amd64.ddeb  roughcopy_1.0-1_amd64.buildinfo  roughcopy_1.0-1_amd64.changes  roughcopy_1.0-1_amd64.deb
RoughCopy_Made_Notes/: Darkness.md  hahaha.txt
debian/: changelog  control  debhelper-build-stamp  files  install  roughcopy.substvars  rules
debian/.debhelper/roughcopy/: dbgsym-build-ids
debian/.debhelper/roughcopy/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/roughcopy/dbgsym-root/usr/share/doc/: roughcopy-dbgsym
debian/roughcopy/DEBIAN/: control  md5sums
debian/roughcopy/usr/share/applications/: RoughCopy.desktop
debian/roughcopy/usr/share/doc/roughcopy/: copyright
src/: CodeEditor.cpp  CodeEditor.h  FileExplorer.cpp  FileExplorer.h  FindDialog.cpp  FindDialog.h  MainWindow.cpp  MainWindow.h  Minimap.cpp  Minimap.h  PreferencesDialog.cpp  PreferencesDialog.h  SearchReplaceDialog.cpp  SearchReplaceDialog.h  TextEditor.cpp  TextEditor.h  main.cpp
